@@ -3,12 +3,13 @@ Hash: SHA256
 
 DIST ncmpcpp-0.5.10.tar.bz2 381162 SHA256 ff6d5376a2d9caba6f5bb78e68af77cefbdb2f04cd256f738e39f8ac9a79a4a8 SHA512 8ddbc05bd8f3febe80cc5c04992a02f8c86151bb171f8f2e46e8df79210f9445e73fd65bdcaa397b3039ebcf510c6bb6ef61be790a6dcf07d5e35e59f71f3702 WHIRLPOOL 26c5e07e69320963ff67ad29eed4994b72f5f5530d884ac058a2ef9e02acfd1947ec54f557458731b000ba8b6e7a95d5652be4bf7bf53171ceed31127a7b1af6
 EBUILD ncmpcpp-0.5.10.ebuild 1892 SHA256 c96ac66a3a765879805ffa9f6dc3847addfaeccd775e2e529523af011953ec64 SHA512 efaf1dbd971b99e95f6e6057c149ea3ef10c7aa908e596c80ce8f69cb8c546cdffa156883b868eccab97c7bb8dd8111803cb5253d9f43ed36d8dad5d93d7e926 WHIRLPOOL d9ea8e615262bffb3bdb17963e39a3123ad1db0e0cb991a18ac5050d7fd211158e6674810393f3bf7622002b9f597fa5cb7ba158edb290aa69829caed4b09e54
-MISC ChangeLog 9319 SHA256 69b702e1754dd2990f4be6fa417976a1455b86a63d381ae40f918cc2fae05258 SHA512 8f452c03b2d42475571ce50d7e4b54b28d6be82ea6aa804298a7b5a870639f4735dbe0aa5f95a6b31dc1083dab2777fa9cc1bc809f062bae43edd73474dd1c02 WHIRLPOOL d78d12e35b52c56d46b7f68abbe033c5cb4305287773c952775e0279fe8b54eeb7ad73fef452de08e5aeaa8e4445663ac13911a3526e05873fa730500a06f5f1
+EBUILD ncmpcpp-9999.ebuild 1550 SHA256 6340fd0461580574ce8535c45f7c163072836b03a9f82eaeec9900626357d330 SHA512 975a8759ccfb991eb4e4f4a166c34da638ab3b117143193c10c509d974a4ebf820176a783d739269a069bac556f39f5e8c6e0156759a228e258860f9ce9e83e6 WHIRLPOOL 4935346dcc8c86319237f41446cf7169ef0a76b25b553ccb618ef5640196b6d0eb872cf230ed558627d03c90b852be4bc4350ece7792c157db7602f3c4067485
+MISC ChangeLog 9436 SHA256 0d5c739c8608568766be7f59e08915f006f7b439d58db1430dc0bd26a69d20fc SHA512 b0616042dbe82fe2bc66cf1bbeb40fa2d76983a458d76bc34d8411738861338ca6f9609d448878edeccbe6a692a1d9d3d2c91c6716be4ff565b8bcf3ab129b1f WHIRLPOOL a38f0d5fdc69977927aee6f2785239a383d675ca742d447ba470496a67e53df10351cb746b7d5227f7eb0bfaba95aa0b9d8960b55975d9ef445a0b7d78d344cd
 MISC metadata.xml 627 SHA256 73bdf8ea0eaec96ab21a99b6000b977a63901ea6833f4cc4aabeeaa0de21e18b SHA512 3104eb9e3cd0886d258febbfe12420fa6f6eaa9eaf2be49238236e0b0fccb181df8bbcece892c8d4c94515b446357c9d6bcf3989b597fe04eae5fabd8cc799ec WHIRLPOOL da23f13cf9e3dedd678f3b0aa9caf75fe91a003448556e6f9f357938acd2623036e40c099eb29061073c8abc3f91b2776e6056529149a31d1bff6f378fc169d3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlDhy9UACgkQVWmRsqeSphPZKQCePFdAxw9d34O3a1Os3SNzpnBf
-vEkAn3DIY2KaF5HmVyY8gO4HA8oUMOEd
-=EmFA
+iEYEAREIAAYFAlH+fIkACgkQVWmRsqeSphM/cgCfQdXpTP7JOvq0wdK2OrF64TQH
+GuAAn0nmKByQcDgq9/33yLgKvSvByded
+=ZCRZ
 -----END PGP SIGNATURE-----
