@@ -1,0 +1,11 @@
+DEFINED_PHASES=configure install postinst prepare unpack
+DEPEND=>=dev-libs/boost-1.50[nls] sys-libs/ncurses[unicode?] >=media-libs/libmpdclient-2.1 curl? ( net-misc/curl ) visualizer? ( sci-libs/fftw:3.0 ) taglib? ( media-libs/taglib ) virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
+DESCRIPTION=NCurses Music Player Client (Plus Plus)
+EAPI=5
+HOMEPAGE=http://ncmpcpp.rybczak.net/
+IUSE=bash-completion clock curl outputs taglib unicode visualizer
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/boost-1.50[nls] sys-libs/ncurses[unicode?] >=media-libs/libmpdclient-2.1 curl? ( net-misc/curl ) visualizer? ( sci-libs/fftw:3.0 ) taglib? ( media-libs/taglib )
+SLOT=0
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	bash-completion-r1	cccf36bdb93b54baafea3b9d97abb0bf	eutils	63afaaed8aa819fdcb814c7cd39495a2	git-2	e92e09651292b1bef5656592364550f7	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=eecf5e2726e91e5be20de46250765f4b
